update to properly edit the plugin in plugin tab

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,6 +15,9 @@
   "haConnectionRefused": "Connection Failed: Connection refused.",
   "haHttpError": "Connection Failed: Received HTTP {code}.",
   "haUrlTokenMissing": "HA URL and Token must be set.",
+  "haTokenRequiredWithUrl": "Access token is required if URL is provided.",
+  "haUrlRequiredWithToken": "URL is required if token is provided.",
+  "haUrlInvalid": "Invalid Home Assistant URL format.",
   "haDomain": "HA Domain",
   "haEntity": "HA Entity",
   "Select_Domain": "Select Domain",
