--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,6 +15,9 @@
     "haConnectionRefused": "Échec Connexion : Connexion refusée.",
     "haHttpError": "Échec Connexion : Erreur HTTP {code}.",
     "haUrlTokenMissing": "URL HA et Jeton requis.",
+    "haTokenRequiredWithUrl": "Un jeton d'accès est requis si une URL est fournie.",
+    "haUrlRequiredWithToken": "Une URL est requise si un jeton est fourni.",
+    "haUrlInvalid": "Format d'URL Home Assistant invalide.",
     "haDomain": "Domaine HA",
     "haEntity": "Entité HA",
     "Select_Domain": "Sélectionner Domaine",
