--- a/locales/zh.json
+++ b/locales/zh.json
@@ -15,6 +15,9 @@
   "haConnectionRefused": "连接失败：连接被拒绝。",
   "haHttpError": "连接失败：收到 HTTP {code}。",
   "haUrlTokenMissing": "必须设置 HA URL 和令牌。",
+  "haTokenRequiredWithUrl": "如果提供了 URL，则需要访问令牌。",
+  "haUrlRequiredWithToken": "如果提供了令牌，则需要 URL。",
+  "haUrlInvalid": "无效的 Home Assistant URL 格式。",
   "haDomain": "HA 域",
   "haEntity": "HA 实体",
   "Select_Domain": "选择域",
