mathcing v3.6.3, with Tailwind CSS

--- a/locales/en.json
+++ b/locales/en.json
@@ -36,5 +36,6 @@
   "turn_on": "Turn On",
   "turn_off": "Turn Off",
   "invalidHaActionSettings": "Invalid Home Assistant action settings.",
-  "haDataFetchFailed": "Failed to fetch Home Assistant data: {message}"
+  "haDataFetchFailed": "Failed to fetch Home Assistant data: {message}",
+  "pluginTestConfigMissing": "Configuration details are required to test the connection."
 }
