--- a/locales/zh.json
+++ b/locales/zh.json
@@ -36,5 +36,6 @@
   "turn_on": "打开",
   "turn_off": "关闭",
   "invalidHaActionSettings": "无效的 Home Assistant 动作设置",
-  "haDataFetchFailed": "获取 Home Assistant 数据失败: {message}"
+  "haDataFetchFailed": "获取 Home Assistant 数据失败: {message}",
+  "pluginTestConfigMissing": "测试连接需要配置详细信息。"
 }
